--- a/style.css
+++ b/style.css
@@ -7,12 +7,15 @@ body,
 }
 
 /* ! HEADER RULES */
+body {
+  padding: 4rem 10px 0px 10px;
+}
+
 .header {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 4rem 10px 0px 10px;
   row-gap: 1rem;
 }
 .header .name {
