added under construction as a category and also added some basic changes

--- a/style.css
+++ b/style.css
@@ -109,6 +109,10 @@ footer {
 
 .works-categories {
   margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  row-gap: 10px;
 }
 
 .works-categories button {
