--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 html,
 body,
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 a {
@@ -11,12 +11,13 @@ a {
 }
 
 body {
-  padding: 4rem 10px 0px 10px;
+  padding: 4rem 10px 10px 10px;
   font-family: "Times New Roman", Times, serif;
+  width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   row-gap: 1rem;
 }
 
@@ -25,6 +26,13 @@ body {
   width: 100%;
 }
 
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 1rem;
+}
 .header .hobby {
   margin-top: -8px;
 }
