--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,9 +1,9 @@
 html,
 body,
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 a {
@@ -11,12 +11,14 @@ a {
 }
 
 body {
-  padding: 4rem 10px 0px 10px;
+  padding: 4rem 10px 10px 10px;
   font-family: "Times New Roman", Times, serif;
+
+  width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   row-gap: 1rem;
 }
 
@@ -27,11 +29,11 @@ body {
 }
 
 .header {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   flex-direction: column;
-//   row-gap: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 1rem;
 
   .name {
   }
