--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,26 +1,7 @@
-html,
-body,
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import "defaults";
+@import "utils";
 
-a {
-  cursor: pointer;
-}
 
-body {
-  padding: 4rem 10px 10px 10px;
-  font-family: "Times New Roman", Times, serif;
-
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  row-gap: 1rem;
-}
 
 .section {
   max-width: 640px !important;
@@ -35,9 +16,6 @@ body {
   row-gap: 1rem;
 
   .name {
-  }
-
-  .pfp {
   }
 
   .hobby {
@@ -138,10 +116,4 @@ body {
   }
 }
 
-footer {
-  padding: 0.25rem 0px 1rem 0px;
-}
 
-.bold-button {
-  font-weight: 700;
-}
