--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@ body {
   align-items: center;
   justify-content: center;
   row-gap: 1rem;
+  column-gap: 0rem;
+  background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/cream_dust.png");
+  background-repeat: repeat;
+  background-size: auto;
 }
 
 footer {
@@ -54,6 +58,9 @@ footer {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+.header .image-text {
+  text-align: center;
 }
 .header .navbar ul {
   list-style-type: none;
