--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -34,6 +34,10 @@
     background-repeat: no-repeat;
   }
 
+  .image-text {
+    text-align: center;
+  }
+
   .navbar {
     ul {
       list-style-type: none;
