--- a/assets/scss/_defaults.scss
+++ b/assets/scss/_defaults.scss
@@ -30,9 +30,9 @@ body {
 //   background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/light_wool.png");
 //   background-image: url("");
 //   background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/greyfloral.png");
-  background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/cream_dust.png");
-  background-repeat: repeat;
-  background-size: auto;
+//   background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/cream_dust.png");
+//   background-repeat: repeat;
+//   background-size: auto;
 
 }
 
