--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -97,10 +97,19 @@
         font-size: 1.2rem;
         color: gray;
 
+        display: flex;
+        justify-content: start;
+        align-items: center;
+
         a {
           color: black;
           text-decoration: none;
           font-weight: 700;
+        }
+        
+        .new-tag{
+            width: 40px;
+            height: 40px;
         }
       }
 
