--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ footer {
 .section {
   max-width: 640px !important;
   width: 100%;
+  margin-top: 1rem;
 }
 
 .header {
@@ -77,6 +78,10 @@ footer {
   text-decoration: underline;
 }
 
+.about-me p:first-child {
+  margin-top: 1rem;
+}
+
 .skills li,
 .learning li {
   list-style-position: inside;
@@ -116,8 +121,8 @@ footer {
   font-weight: 700;
 }
 .works .works-container .project .title .new-tag {
-  width: 40px;
-  height: 40px;
+  width: 28px;
+  height: 28px;
 }
 .works .works-container .project .description {
   margin-top: 0.25rem;
