--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,8 +1,6 @@
 @import "defaults";
 @import "utils";
 
-
-
 .section {
   max-width: 640px !important;
   width: 100%;
@@ -61,9 +59,9 @@
 }
 
 .about-me {
-    p:first-child {
-        margin-top: 1rem;
-    }
+  p:first-child {
+    margin-top: 1rem;
+  }
 }
 
 .skills,
@@ -92,6 +90,26 @@
     }
   }
 
+  .works-navigator {
+
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1rem;
+    margin-top: 1rem;
+
+    button {
+      padding: 5px;
+    }
+
+    .prev-btn {
+    }
+
+    .next-btn {
+    }
+  }
+
   .works-container {
     .project {
       margin-top: 0.5rem;
@@ -113,10 +131,10 @@
           text-decoration: none;
           font-weight: 700;
         }
-        
-        .new-tag{
-            width: 28px;
-            height: 28px;
+
+        .new-tag {
+          width: 28px;
+          height: 28px;
         }
       }
 
@@ -135,5 +153,3 @@
     }
   }
 }
-
-
