--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,8 @@ body {
   justify-content: center;
   row-gap: 1rem;
   column-gap: 0rem;
+  background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/swirl.png");
+  background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/light_wool.png");
 }
 
 footer {
@@ -116,6 +118,9 @@ footer {
 }
 .works .works-navigator button {
   padding: 5px;
+}
+.works .works-container hr {
+  margin: 15px 0px;
 }
 .works .works-container .project {
   margin-top: 0.5rem;
