--- a/assets/scss/_defaults.scss
+++ b/assets/scss/_defaults.scss
@@ -26,15 +26,17 @@ body {
   row-gap: 1rem;
   column-gap: 0rem;
 
-//   background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/swirl.png");
-//   background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/light_wool.png");
-//   background-image: url("");
-//   background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/greyfloral.png");
-//   background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/cream_dust.png");
-//   background-repeat: repeat;
-//   background-size: auto;
+  background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/swirl.png");
+  background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/light_wool.png");
+  //   background-image: url("");
+  //   background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/greyfloral.png");
+  //   background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/cream_dust.png");
+  //   background-repeat: repeat;
+  //   background-size: auto;
 
 }
+
+
 
 footer {
   padding: 0.25rem 0px 1rem 0px;
