--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 html,
 body,
 * {
@@ -12,7 +14,11 @@ a {
 
 body {
   padding: 4rem 10px 10px 10px;
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Inter", sans-serif;
+  font-family: "Jost", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -20,8 +26,8 @@ body {
   justify-content: center;
   row-gap: 1rem;
   column-gap: 0rem;
-  background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/swirl.png");
-  background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/light_wool.png");
+  background-color: black;
+  color: white;
 }
 
 footer {
@@ -45,39 +51,31 @@ footer {
   flex-direction: column;
   row-gap: 1rem;
 }
+.header .name {
+  font-size: 3rem;
+}
 .header .hobby {
   margin-top: -8px;
-}
-.header .image-container {
-  border: 3px solid black;
-  border-style: groove;
-  width: 100%;
-  max-width: 512px;
-  height: 400px;
-  background-image: url(/assets/images/ray.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-.header .image-text {
-  text-align: center;
+  color: dimgray;
 }
 .header .navbar ul {
   list-style-type: none;
   display: flex;
   width: fit-content;
+  column-gap: 15px;
 }
 .header .navbar ul li {
   font-size: 1.2rem;
+  fill: white;
 }
 .header .navbar ul li a,
 .header .navbar ul li a:visited {
-  text-decoration: wavy;
-  color: darkslateblue;
+  fill: #ffffee;
 }
-.header .navbar ul li a:hover,
-.header .navbar ul li a:visited:hover {
-  text-decoration: underline;
+.header .navbar ul li a svg,
+.header .navbar ul li a:visited svg {
+  width: 32px;
+  height: 32px;
 }
 
 .about-me p:first-child {
