--- a/assets/scss/_defaults.scss
+++ b/assets/scss/_defaults.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 html,
 body,
 * {
@@ -13,7 +17,13 @@ a {
 
 body {
   padding: 4rem 10px 10px 10px;
-  font-family: "Times New Roman", Times, serif;
+  // font-family: "Times New Roman", Times, serif;
+
+  font-family: "Inter", sans-serif;
+  font-family: "Jost", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 
   width: 100%;
 
@@ -26,13 +36,15 @@ body {
   row-gap: 1rem;
   column-gap: 0rem;
 
-  background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/swirl.png");
-  background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/light_wool.png");
+  background-color: black;
+  color: white;
+
+  // background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/swirl.png");
+  // background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/light_wool.png");
   //   background-image: url("");
-  //   background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/greyfloral.png");
-  //   background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/cream_dust.png");
-  //   background-repeat: repeat;
-  //   background-size: auto;
+  // background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/greyfloral.png");
+  // background-repeat: repeat;
+  // background-size: auto;
 
 }
 
