--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -77,7 +77,17 @@
     row-gap: 10px;
 
     button {
-      padding: 0 2px;
+      padding: 2px 5px;
+      color: white;
+      font-family: inherit;
+      background-color: transparent;
+      border: 1.5px solid gray;
+      border-radius: 8px;
+    }
+
+    .bold-button {
+      background-color: white;
+      color: black;
     }
   }
 
