added some changes to hr of work container. let's remove the tags shown, shall we?

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -117,7 +117,9 @@
 
   .works-container {
     hr {
-      margin: 15px 0px;
+      margin: 15px 5px;
+      height: 0.5px;
+      border: 0.5px solid #333;
     }
 
     .project {
