--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,9 @@ footer {
   padding: 5px;
 }
 .works .works-container hr {
-  margin: 15px 0px;
+  margin: 15px 5px;
+  height: 0.5px;
+  border: 0.5px solid #333;
 }
 .works .works-container .project {
   margin-top: 0.5rem;
