--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -158,14 +158,15 @@
 
       .description {
         margin-top: 0.25rem;
-        color: rgb(44, 44, 44);
+        color: #666;
       }
 
       .tags {
-        margin-top: 7px;
+        margin-top: 10px;
+        font-size: .85rem;
 
         span {
-          font-style: italic;
+          // font-style: italic;
         }
       }
     }
