--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -148,7 +148,29 @@
           font-size: 1.5rem;
           text-decoration: none;
           font-weight: 700;
+
+
+          text-decoration-line: underline;
+          text-decoration-style: wavy;
+          /* adds the squiggly effect */
+          // text-decoration-color: #1e90ff;
+          text-decoration-color: lightpink;
+          /* optional color */
+          text-underline-offset: 6.5px; // optional spacing
+          text-decoration-thickness: 2px;
+
+
+          &:hover {
+            text-decoration-color: hotpink;
+          }
+
+          &:visited {
+            text-decoration-color: #1e90ff;
+          }
+
+
         }
+
 
         .new-tag {
           width: 28px;
