--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -92,7 +92,6 @@
   }
 
   .works-pagination {
-    margin-top: 1rem;
     text-align: center;
   }
 
@@ -102,10 +101,15 @@
     justify-content: center;
     align-items: center;
     column-gap: 1rem;
-    margin-top: 1rem;
+    margin: 1.5rem 0rem;
 
     button {
-      padding: 5px;
+      background-color: black;
+      color: white;
+      border: 1.5px solid gray;
+      padding: 3px 5px;
+      border-radius: 8px;
+      font-family: inherit;
     }
 
     button:disabled {}
@@ -180,12 +184,13 @@
 
       .description {
         margin-top: 0.25rem;
-        color: #666;
+        color: #888;
       }
 
       .tags {
         margin-top: 10px;
         font-size: .85rem;
+        color: #555;
 
         span {
           // font-style: italic;
