--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,8 @@ footer {
   justify-content: center;
   align-items: center;
   column-gap: 1rem;
-  margin: 1.5rem 0rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 .works .works-navigator button {
   background-color: black;
@@ -149,6 +150,11 @@ footer {
   background-color: white;
   color: black;
   border-color: black;
+}
+.works .works-navigator button:disabled {
+  background-color: black;
+  border: 1.5px solid #444;
+  color: #444;
 }
 .works .works-container {
   margin-top: 20px;
