--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -116,7 +116,8 @@
     justify-content: center;
     align-items: center;
     column-gap: 1rem;
-    margin: 1.5rem 0rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 
     button {
       background-color: black;
@@ -136,7 +137,11 @@
       }
     }
 
-    button:disabled {}
+    button:disabled {
+      background-color: black;
+      border: 1.5px solid #444;
+      color: #444;
+    }
 
     .prev-btn {}
 
