--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -246,7 +246,7 @@
     .project {
       margin-top: 0.5rem;
 
-      .under-dev-work {
+      .under-development {
         color: red !important;
       }
 
